CSS and Scrollbar fixes

--- a/Project/stylesheets/project.css
+++ b/Project/stylesheets/project.css
@@ -158,7 +158,7 @@ select::-ms-expand{
 
 #projectDescription{
     direction: ltr;
-    margin-right: 16%;
+    margin-right: 20%;
     border-style: none;
     background-color: rgba(0,0,0,0);
     color: #434343;
@@ -168,7 +168,7 @@ select::-ms-expand{
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
     height: 1000px;
-    width: 80%;
+    width: 70%;
     border-radius: 5px;
     overflow: auto;
     text-align: left;
@@ -203,6 +203,26 @@ select::-ms-expand{
     height: 100vh;
     z-index: 2;
     overflow-x: auto;
+}
+
+#boardContainer::-webkit-scrollbar{
+    height: 20px !important;
+    transition: .2s ease !important;
+}
+
+#boardContainer::-webkit-scrollbar:hover{
+    height: 30px !important;
+    opacity: .8 !important;
+}
+
+
+#boardContainer::-webkit-scrollbar-thumb{
+    background-color: rgba(59, 59, 59, 0.4) !important;
+    border-radius: 5px !important;
+}
+
+#boardContainer::-webkit-scrollbar-thumb:hover{
+    background-color: rgba(36, 36, 36, 0.9) !important;
 }
 
 .taskColumn{
